--- a/src/Resources/styles/front/common/components/in/availability.less
+++ b/src/Resources/styles/front/common/components/in/availability.less
@@ -4,7 +4,7 @@
     margin-bottom: 10px;
 
     color: @color-green;
-    font-size: @font-size-extra-small;
+    font-size: @font-size-small;
 
     &--big {
         display: flex;
@@ -26,17 +26,11 @@
         }
     }
 
-    &__spacer {
-        display: block;
-        margin-bottom: 7px;
-    }
-
     &__text {
         display: block;
         line-height: 18px;
 
-        font-size: 13px;
-        font-weight: 700;
+        font-size: @font-size-small;
         color: @color-green;
 
         &--out-of-stock {
