--- a/src/Resources/styles/front/common/components/in/flag.less
+++ b/src/Resources/styles/front/common/components/in/flag.less
@@ -33,6 +33,11 @@
         bottom: auto; 
     }
 
+    &--product-list {
+        top: 100%;
+        margin-top: 10px;
+    }
+
     @media @query-tablet {
         display: none;
     }
