--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -51,3 +51,17 @@ button.active {
     opacity: 0.5;
     cursor: no-drop;
 }
+
+//TODO KOD: TF-81
+.js-product-filter-box-label.inactive {
+    display: none;
+}
+
+.js-product-filter-box-button.inactive {
+    display: none;
+}
+
+.js-product-filter-box-button {
+    cursor: pointer;
+    text-decoration: underline;
+}
