[TF-93] Fixes user search in administration

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Customer/list.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Customer/list.html.twig
@@ -9,7 +9,7 @@
             {{ form_widget(quickSearchForm.submit, { label: 'Search [verb]'|trans, full_name: ''}) }}
             <i class="svg svg-info cursor-help js-tooltip"
                data-toggle="tooltip" data-placement="right"
-               title="{{ 'Vyhledávání hledá v příjmení, názvu firmy, emailu, telefonu a ean. Je možné používat operátory * a ?.'|trans }}"
+               title="{{ 'Vyhledávání hledá v příjmení, názvu firmy, emailu a telefonu. Je možné používat operátory * a ?.'|trans }}"
             ></i>
         </div>
     </div>
