--- a/src/Resources/styles/front/common/components/box/list.less
+++ b/src/Resources/styles/front/common/components/box/list.less
@@ -1,14 +1,13 @@
-@box-list-description-line-height: 30px;
-@box-list-description-font-size: 18px;
-
 @box-list-item-gap: 30px;
-
 @box-list-panel-width: 255px;
 @box-list-panel-gap: 45px;
-
-@box-list-bottom-gap: 62px;
-
+@box-list-bottom-gap: 70px;
 @box-list-producer-image-width: 150px;
+@box-list-actions-button-icon: 10px;
+
+@box-list-description-width: 54%;
+@box-list-description-line-height: 24px;
+@box-list-description-font-size: 16px;
 
 .box-list {
     &__title {
@@ -29,10 +28,6 @@
     &__wrap {
         display: flex;
         flex-direction: row;
-
-        @media @query-md {
-            margin-bottom: 80px;
-        }
     }
 
     &__panel {
@@ -72,6 +67,10 @@
         border-radius: @radius;
     }
 
+    &__products {
+        margin-bottom: @box-list-bottom-gap;
+    }
+
     &__filter-opener {
         text-align: center;
         padding: @margin-gap 0;
@@ -85,20 +84,17 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        padding-top: 50px;
 
         @media @query-lg {
             flex-direction: row;
         }
 
         &__title {
-            margin-bottom: 25px;
+            margin-bottom: 11px;
+            line-height: 45px;
 
-            color: @color-base;
-            font-family: @font-alt;
-            font-size: 24px;
+            font-size: 30px;
             font-weight: 700;
-            text-transform: uppercase;
         }
 
         &__description {
@@ -106,7 +102,7 @@
             margin-bottom: @box-list-bottom-gap/2;
 
             @media @query-lg {
-                width: 100%/2;
+                width: @box-list-description-width;
                 padding-right: 70px;
                 margin-bottom: @box-list-bottom-gap;
             }
@@ -123,11 +119,26 @@
         &__article {
             width: 100%;
             margin-bottom: @box-list-bottom-gap/2;
+            padding: 20px;
+
+            border-radius: @radius-big;
+            background: @color-base;
 
             @media @query-lg {
-                width: 100%/2;
+                width: calc(~"100% - @{box-list-description-width}");
                 margin-bottom: @box-list-bottom-gap;
-                padding-left: 62px;
+                padding: 32px;
+            }
+
+            @media @query-xl {
+                padding-bottom: 100px;
+
+                background: @color-base url('@{path-design}/fish-corner-left-bottom.png') 30px calc(~"100% - 30px") no-repeat;
+            }
+
+            &__title {
+                color: @color-f;
+                text-transform: uppercase;
             }
         }
     }
@@ -160,7 +171,7 @@
         flex-direction: column;
         margin-bottom: @margin-gap;
 
-        @media @query-md {
+        @media @query-lg {
             flex-direction: row;
         }
 
@@ -173,10 +184,12 @@
         }
 
         &__button {
-            text-align: center;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
             margin-bottom: @margin-gap;
 
-            @media @query-md {
+            @media @query-lg {
                 position: absolute;
                 left: 50%;
                 transform: translateX(-50%);
@@ -192,10 +205,19 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
+
+            &__icon {
+                opacity: 0.6;
+                order: 2;
+                margin-left: 10px;
+                height: @box-list-actions-button-icon;
+
+                font-size: @box-list-actions-button-icon;
+            }
         }
 
         &__pagination {
-            @media @query-md {
+            @media @query-lg {
                 margin-left: auto;
             }
 
