--- a/src/Resources/styles/front/common/components/in/paging.less
+++ b/src/Resources/styles/front/common/components/in/paging.less
@@ -27,6 +27,7 @@
             display: inline-block;
             vertical-align: middle;
             min-width: @in-paging-size;
+            padding: 0 5px;
             height: @in-paging-size;
             line-height: @in-paging-size;
             margin: @in-paging-item-gap / 2;
@@ -36,14 +37,19 @@
             border-radius: @radius-small;
             box-shadow: @box-shadow-outer;
 
+            &:hover {
+                text-decoration: none;
+            }
+
             &--num {
                 text-decoration: none;
-                background: @color-gray;
+                background-color: @color-turquoise;
                 border: 1px solid rgba(0,0,0,0.1);
                 color: @color-f;
+                transition: @transition;
 
                 &:hover {
-                    background: darken(@color-gray, 5%);
+                    background: darken(@color-primary, 5%);
                     color: @color-f;
                 }
 
