--- a/templates/Front/Inline/Paginator/paginator.html.twig
+++ b/templates/Front/Inline/Paginator/paginator.html.twig
@@ -87,7 +87,7 @@
 {% endmacro %}
 
 {% macro loadMoreButton(paginationResult, url = '', pageQueryParameter = 'page') %}
-    <input type="button" class="js-load-more-button btn"
+    <button class="btn btn--big js-load-more-button"
            data-page="{{ paginationResult.page }}"
            data-page-size="{{ paginationResult.pageSize }}"
            data-pagination-to-item="{{ paginationResult.toItem }}"
@@ -95,4 +95,7 @@
            data-url="{{ url }}"
            data-page-query-parameter="{{ pageQueryParameter }}"
     />
+
+        <i class="box-list__actions__button__icon svg svg-triangle"></i>
+    </button>
 {% endmacro %}
