--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -60,28 +60,33 @@
                         <div class="box-list__products">
                             {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResult, filterFormSubmitted: filterFormSubmitted} %}
                         </div>
-                        {% if category.legendaryCategory == true %}
-                            <div class="box-list__bottom">
-                                <div class="box-list__bottom__description">
-                                    <h3 class="box-list__bottom__title">
-                                        {{ category.name }}
-                                    </h3>
-                                    <div class="box-list__bottom__description__text in-user-text js-category-description ">
-                                        {{ category.getDescription(domain.id)|raw }}
-                                    </div>
-                                </div>
-                                {% if categoriesBlogArticles|length > 0 %}
-                                    <div class="box-list__bottom__article">
-                                        <h3 class="box-list__bottom__article__title">
-                                            {{ 'Mohlo by vás zajímat'|trans }}
-                                        </h3>
-                                        {% include 'Front/Content/Article/list.html.twig' with { blogArticles: categoriesBlogArticles, cssClass: 'list-articles--product-list list-articles--white' } %}
-                                    </div>
-                                {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="web__line">
+            <div class="web__container">
+                {% if category.legendaryCategory == true %}
+                    <div class="box-list__bottom">
+                        <div class="box-list__bottom__description">
+                            <h3 class="box-list__bottom__title">
+                                {{ category.name }}
+                            </h3>
+                            <div class="box-list__bottom__description__text in-user-text js-category-description ">
+                                {{ category.getDescription(domain.id)|raw }}
+                            </div>
+                        </div>
+                        {% if categoriesBlogArticles|length > 0 %}
+                            <div class="box-list__bottom__article">
+                                <h3 class="box-list__bottom__article__title">
+                                    {{ 'Mohlo by vás zajímat'|trans }}
+                                </h3>
+                                {% include 'Front/Content/Article/list.html.twig' with { blogArticles: categoriesBlogArticles, cssClass: 'list-articles--product-list list-articles--white' } %}
                             </div>
                         {% endif %}
                     </div>
-                </div>
+                {% endif %}
             </div>
         </div>
 
