--- a/templates/Front/Content/Article/index.html.twig
+++ b/templates/Front/Content/Article/index.html.twig
@@ -1,6 +1,6 @@
 <div class="box-articles">
     <h2 class="box-articles__title">
-        {{ 'Shopsys magazín'|trans }}
+        {{ 'Načerpejte inspiraci'|trans }}
     </h2>
     <a class="box-articles__link" href="{{ url('front_blogcategory_detail', { id: constant('App\\Model\\Blog\\Category\\BlogCategory::BLOG_MAIN_PAGE_CATEGORY_ID')}) }}">
         {{ 'Přejít na výpis všech článků'|trans }}
