design: remove line and add border radius to article img

--- a/src/Resources/styles/front/common/components/list/grid-images.less
+++ b/src/Resources/styles/front/common/components/list/grid-images.less
@@ -6,6 +6,7 @@
 .list-grid-images {
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
 
     &__landscape {
         .reset-ul();
