design: edit position of prices in last visited list

--- a/src/Resources/styles/front/common/components/list/last-visited.less
+++ b/src/Resources/styles/front/common/components/list/last-visited.less
@@ -166,7 +166,7 @@
 
                 &__old {
                     display: inline;
-                    padding-left: 5px;
+                    padding-right: 5px;
                     font-weight: normal;
                     font-size: @font-size-extra-small;
                     color: @color-price-old;
