[TF-129] Fixes wrong timezone in TransferIssue list

--- a/templates/Admin/Content/Transfer/Issue/listGrid.html.twig
+++ b/templates/Admin/Content/Transfer/Issue/listGrid.html.twig
@@ -15,5 +15,8 @@
     {% else %}
         {{ value }}
     {% endif %}
+{% endblock %}
 
+{% block grid_value_cell_id_createdAt %}
+    {{ value|formatDateTime }}
 {% endblock %}
